chore: EC2 연동을 위해 JDK 버전 변경